fix(SD-2125): transparent icon aligns sub items in hamburger dropdown

--- a/styles/rwb/stylesheets/scss/_custom.scss
+++ b/styles/rwb/stylesheets/scss/_custom.scss
@@ -31,20 +31,7 @@ noscript {
   font-size: 20px;
   vertical-align: middle;
 }
-.user-menu__list-item-link--toggler {
-  .user-menu__list-item-link:after {
-    font-family: "icomoon";
-    content: '\e976';
-    border: none;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 10px;
-    font-size: 28px;
-    color: #ccc;
-    cursor: pointer;
-  }
-}
+
 .icon-eye-off.show:before {
   content: '\e978';
 }
