--- a/styles/rwb/stylesheets/scss/font-icons.scss
+++ b/styles/rwb/stylesheets/scss/font-icons.scss
@@ -359,3 +359,7 @@
 .icon-youtube:before {
   content: "\e984";
 }
+.icon-transparent:before {
+  content: "\e984";
+  color: transparent;
+}
